Make sure body scrolling is only prevented on small screens

--- a/src/styles/global/layout.scss
+++ b/src/styles/global/layout.scss
@@ -11,7 +11,7 @@ html {
   margin: 0 auto;
 }
 
-@include media-query($large-down) {
+@include media-query($medium-down) {
   body.menu-open {
     overflow: hidden;
   }
